improved scripts and added variables support