@@ -14,7 +14,7 @@ sudo yum install java-1.8.0-openjdk-devel -y
 sudo wget -O /etc/yum.repos.d/jenkins.repo http://pkg.jenkins-ci.org/redhat-stable/jenkins.repo
 sudo rpm --import https://jenkins-ci.org/redhat/jenkins-ci.org.key
 sudo yum install jenkins -y
-sudo sed -i 's/JENKINS_JAVA_OPTIONS.*/JENKINS_JAVA_OPTIONS="-Djava.awt.headless=true -Djenkins.install.runSetupWizard=false -Xmx1024m -XX:MaxPermSize=512m"/' /etc/sysconfig/jenkins
+sudo sed -i 's/JENKINS_JAVA_OPTIONS.*/JENKINS_JAVA_OPTIONS="-Djava.awt.headless=true -Djenkins.install.runSetupWizard=false"/' /etc/sysconfig/jenkins
 
 # Installation of plugins and dependencies using Jenkins CLI
 sudo service jenkins start
